--- a/index.html
+++ b/index.html
@@ -5,14 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <div class="wrapper">
       <header class="header">
-        <div class="header-left-links"></div>
-        <div class="header-logo"></div>
-        <div class="header-right-links"></div>
+        <div class="header-left-links">
+          <a href="#" class="link-el">SHOP</a>
+          <a href="#" class="link-el">ALWAYS PAN</a>
+        </div>
+        <a href="#">
+          <img src="/img/logo.svg" alt="logo" class="header-logo" />
+        </a>
+        <div class="header-right">
+          <div class="header-right-links">
+            <a href="#" class="link-el">MISSION</a>
+            <a href="#" class="link-el">FAQS</a>
+          </div>
+          <div class="profile-photo-block">
+            <a href="#" class="profile-photo">0</a>
+          </div>
+        </div>
       </header>
+      <div class="first-screen">
+        <p class="fs-desc">MEET THE ALWAYS PAN</p>
+        <p class="fs-header">Your new skillet</p>
+        <a href="#" class="fs-button">SHOP THE ALWAYS PAN</a>
+      </div>
+
     </div>
   </body>
 </html>
