--- a/index.html
+++ b/index.html
@@ -28,11 +28,41 @@
         </div>
       </header>
       <div class="first-screen">
-        <p class="fs-desc">MEET THE ALWAYS PAN</p>
-        <p class="fs-header">Your new skillet</p>
+        <div class="fs-textblock">
+          <p class="fs-desc">MEET THE ALWAYS PAN</p>
+          <div class="fs-header-block">
+            <p class="fs-header">Your new</p>
+            <p class="fs-header ins">skillet</p>
+          </div>
+        </div>
         <a href="#" class="fs-button">SHOP THE ALWAYS PAN</a>
       </div>
+      <div class="cookware-pieces">
+        <h2 class="cw-desc">
+          "DOING THE JOB OF EIGHT TRADITIONAL COOKWARE <br />
+          PIECES"
+        </h2>
+        <div class="cw-rec">
+          <img src="/img/bon-appetit.png" alt="" />
+          <img src="/img/ny-times.png" alt="" />
+          <img src="/img/vogue.png" alt="" />
+          <img src="/img/the-oprah.png" alt="" />
+        </div>
+      </div>
 
+      <div class="place-block">
+        <h2 class="place-header">Welcome to Our Place</h2>
+        <p class="place-desc">
+          At Our Place, we believe in the power of home-cooking to bring people
+          together. Our <br />
+          collections are new heirlooms from the cultures and places that make
+          up the fabric of the<br />
+          modern multi-ethnic kitchen. We design thoughtfully, source ethically,
+          and produce<br />
+          sustainably because what we make is connected to one another and the
+          earth we share.
+        </p>
+      </div>
     </div>
   </body>
 </html>
